feat(office): Impled ability to download document from office and load to elastic
